[KUrlNavigatorPlacesSelector] Properly identify teardown action

Rather than relying on the model count (which broke when we added places categories), just identify the action by the data it is given.

BUG: 403454

Differential Revision: https://phabricator.kde.org/D18425